fixed a logo z-index

--- a/assets/css/src/_logo.scss
+++ b/assets/css/src/_logo.scss
@@ -1,5 +1,5 @@
 .custom-logo-link {
 	position: relative;
-	z-index: 1;
+	z-index: 100;
 }
 
